Bug 469621 - Selection mode cannot be triggered with space shortcut after using some buttons from toolbar
Summary: Selection mode cannot be triggered with space shortcut after using some butto...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: Selection Mode (other bugs)
Version First Reported In: 23.04.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2023-05-11 13:53 UTC by medin
Modified: 2023-06-28 16:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Selection mode cannot be triggered with space shortcut after using some buttons from toolbar (2.04 MB, video/mp4)
2023-05-11 13:53 UTC, medin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description medin 2023-05-11 13:53:16 UTC
Created attachment 158857 [details]
Selection mode cannot be triggered with space shortcut after using some buttons from toolbar

See attached video for more info.
Comment 1 Felix Ernst 2023-05-13 10:08:00 UTC
Seems like the keyboard focus doesn't correctly go back to the view after the selection mode's bottom action bar hides itself.
Comment 2 Bug Janitor Service 2023-06-23 17:16:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/560
Comment 3 Felix Ernst 2023-06-28 16:36:21 UTC
Git commit 0bf439833c489b6eb0e629271010b59ba90b8fa6 by Felix Ernst, on behalf of Felix Ernst.
Committed on 28/06/2023 at 16:35.
Pushed by felixernst into branch 'master'.

Move focus from hiding selection mode bars to view

When a user exits selection mode for example by clicking the "Exit
Selection Mode" button, the bar is closed but the focus doesn't return
to the view which would be expected. This commit actively moves the
focus to the view in such a scenario.

M  +4    -0    src/dolphinviewcontainer.cpp

https://invent.kde.org/system/dolphin/-/commit/0bf439833c489b6eb0e629271010b59ba90b8fa6